logging/fluentd-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fluentd
  namespace: logging
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fluentd
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: elasticsearch-master
    ports:
    - protocol: TCP
      port: 9200
